# hydropark-gym

./: .gitattributes  .gitignore  README.md
.github/workflows/: build-macos.yml  ci.yml
backend/: .dockerignore  AGENT-CONTRACT.md  Dockerfile  pom.xml
backend/docs/: ADR-001-license-signature-algorithm.md  HSM-MIGRATION.md  LICENSE-FORMAT.md  MIGRATIONS.md
backend/src/main/resources/: application.yml
backend/src/test/resources/mtls/: ca.crt  rogue.crt  zone-good.crt
client/: IPC-CONTRACT.md  README.md
client/docs/: REAL-INFERENCE.md
client/e2e/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
client/e2e/scenarios/: 00-smoke.ts  10-free-install.ts  20-paid-buy.ts  30-chat-tool-render.ts  40-installed-visible.ts  50-paid-enable.ts  60-first-run-tour.ts
client/e2e/src/: app-lifecycle.ts  cdp.ts  check-dev-client-isolation.ts  report.ts  run.ts  scenario.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: backend_client.rs  capacity.rs  composition.rs  deep_link.rs  device.rs  downloader.rs  fetch_guard.rs  grammar.rs  hpskill.rs  inference.rs  ipc.rs  license_verify.rs  main.rs  manifest.rs  offline_matrix.rs  orchestrator.rs  package_verify.rs  session.rs  shared_state.rs  skill_manager.rs  store.rs  telemetry.rs  templates.rs  tool_catalog.rs  tool_routing.rs  tools.rs  turn.rs  unlock.rs  updater.rs
client/src-tauri/src/skills/: mod.rs
client/src-tauri/src/skills/allergen/: allergens.json  mod.rs
client/src-tauri/src/skills/cooking_assistant/: mod.rs  persona.md
client/web/: README.md  angular.json  package-lock.json  package.json
client/web/public/fonts/: OFL.txt  README.md
client/web/src/: index.html  styles.css
client/web/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts
client/web/src/app/a11y/: axe-widgets.spec.ts
client/web/src/app/account/: account-menu.component.css  account-menu.component.ts  auth-dialog.component.css  auth-dialog.component.html  auth-dialog.component.ts  auth.service.ts
client/web/src/app/composition/: bound-state.ts  composed-panel-host.component.css  composed-panel-host.component.html  composed-panel-host.component.spec.ts  composed-panel-host.component.ts  composition.service.spec.ts  composition.service.ts  enabled-skills.service.spec.ts  enabled-skills.service.ts  manifest-registry.ts  skill-manifest.ts  widget-registry.ts
client/web/src/app/hardware-warning/: hardware-warning.component.css  hardware-warning.component.ts
client/web/src/app/inference/: inference.service.spec.ts  inference.service.ts
client/web/src/app/installed-skills/: installed-skills.component.css  installed-skills.component.html  installed-skills.component.spec.ts  installed-skills.component.ts
client/web/src/app/ipc/: contract.ts  ipc.port.ts  ipc.provider.ts  mock-ipc.service.ts  tauri-ipc.service.ts
client/web/src/app/marketplace/: catalog-ipc.adapter.spec.ts  catalog-ipc.adapter.ts  catalog-stub.adapter.spec.ts  catalog-stub.adapter.ts  catalog.model.ts  catalog.port.ts  catalog.providers.ts  marketplace-view.component.ts  preview-transcripts.ts  purchase.service.spec.ts  purchase.service.ts  sample-prompts.ts
client/web/src/app/models/: model-download.component.css  model-download.component.html  model-download.component.ts  model-download.service.ts
client/web/src/app/onboarding/: hardware-tier.ts  onboarding-overlay.component.css  onboarding-overlay.component.html  onboarding-overlay.component.ts  onboarding.service.ts
client/web/src/styles/: fonts.css  tokens.css
contracts/: README.md  skill-manifest.schema.json
contracts/catalog/: budget-bills.manifest.json  car-care.manifest.json  cooking-assistant.manifest.json  garden-plants.manifest.json  home-diy.manifest.json  kitchen-timer.manifest.json  nutrition-coach.manifest.json  packing-list.manifest.json  study-flashcards.manifest.json  travel-planner.manifest.json
contracts/examples/: cooking-assistant.manifest.json
contracts/ipc/: ipc-contract.md  ipc-messages.schema.json
contracts/testdata/: license-es256-golden.json  package-signing-golden.json
contracts/widgets/: _widget-base.schema.json  _widget-contract.md  chat.schema.json  date_time_picker.schema.json  editable_list.schema.json  key_value_panel.schema.json  media_note.schema.json  progress.schema.json  quick_actions.schema.json  segmented_toggle.schema.json  slider_stepper.schema.json  table.schema.json  tabs.schema.json  timer_stack.schema.json
deploy/: .env.example  .gitignore  README.md  docker-compose.yml
deploy/certs/: .gitkeep
deploy/fly/: atlas-provision.ps1  atlas-roles.js  bootstrap-secrets.ps1  deploy-cloud.ps1  fly.api.toml  fly.issuer.toml  fly.worker.toml  migrate-cloud.ps1  privcheck.js
deploy/local/: down.ps1  down.sh  logs.ps1  logs.sh  migrate.ps1  migrate.sh  reset.ps1  reset.sh  seed.ps1  seed.sh  smoke.ps1  smoke.sh  up.ps1  up.sh
deploy/local-native/: README.md  _env.ps1  backend.ps1  client.ps1  dev-down.ps1  dev-up.ps1  e2e-up.ps1  mongo.ps1
deploy/scripts/: generate-internal-certs.ps1  generate-internal-certs.sh  generate-keys.ps1  generate-keys.sh
eval/: allergen.py  deterministic_layers.py  harness.py  model_client.py  test_allergen.py  unit_math.py
eval/prompts/: adversarial_safety.jsonl  correctness.jsonl
fulfillment/: .gitignore  README.md  fulfill.py  parity_check.mjs  unlock_codes.py
landing/: README.md  app.js  index.html  styles.css
landing-gym/: README.md  _headers  _redirects  app.js  index.html  llms.txt  privacy.html  robots.txt  site.webmanifest  sitemap.xml  styles.css  terms.html
landing-gym/test/: check.mjs  smoke.mjs  verify-launch.mjs
portal/: index.html  styles.css  tsconfig.json
portal/src/: api.ts  apiClient.ts  app.ts  config.ts  dom.ts  router.ts  session.ts  types.ts  ui.ts
portal/src/views/: devices.ts  entitlements.ts  login.ts  privacy.ts  purchases.ts  refund.ts  support.ts
scripts/: a11y-contrast-audit.mjs  subset-fonts.mjs
(+450 files in other folders)
