[package]
name = "hydropark"
version = "0.1.0"
description = "Hydropark Phase-0 desktop shell — throwaway validation prototype (PHASE0-PLAN.md §0). Not the seed of the production client."
authors = ["xamcross@gmail.com"]
edition = "2021"
rust-version = "1.77"
publish = false

# NOTE TO BUILDERS: the default (`mock-inference`) crate builds, links, and
# runs on Windows (see client/README.md). The `real-inference` feature has
# now been BUILT AND RUN on this machine (MSVC + CMake + LLVM/libclang for
# bindgen) — it loads the bundled Qwen2.5-3B GGUF and streams tokens; see
# client/docs/REAL-INFERENCE.md for the one-shot build + run + benchmark and
# the measured throughput (P0-02.3). The `llama-cpp-2` 0.1.151 API calls in
# `inference.rs::real` are compiler-checked as of that build.

# Desktop-only for Phase 0 (PHASE0-PLAN §2: "Win + macOS if cheap, else Win
# only") — no mobile target, so this stays a plain binary crate rather than
# the lib+thin-main split `cargo tauri init` scaffolds for mobile-capable
# apps. Revisit if/when a mobile target is ever in scope.
[[bin]]
name = "hydropark"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
# P1-01.2 purchase-callback deep link: registers the `hydropark://` scheme so the
# hosted-checkout redirect routes the OS back into the app (see tauri.conf.json
# `plugins.deep-link` + capabilities `deep-link:default`).
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
thiserror = "1"
sysinfo = "0.30"

# Skill-package signature verification (P1-03.3): RFC 8785 JCS canonicalization + Ed25519 verify,
# cross-checked byte-for-byte against the backend golden vector
# (contracts/testdata/package-signing-golden.json). All pure-Rust, so it builds under the
# toolchain-free `mock-inference` feature too.
ed25519-dalek = "2"
base64 = "0.22"
serde_jcs = "0.1"

# Offline license verification (P1-09.4/.5): compact JWS verified with the per-`kid` PINNED
# algorithm - ES256 (ECDSA P-256) for new issuance, EdDSA for legacy keys - never the token
# `alg` header (ADR-001). Pure-Rust (no C), so it builds under `mock-inference` too.
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"

# Device identity (P1-09.3/.8): a persisted Ed25519 device keypair (via `ed25519-dalek`
# above) whose 32-byte seed comes from the OS RNG, plus a coarse SHA-256 hardware
# fingerprint. `getrandom` is a direct dep only for the key seed; it is already in
# the tree transitively (uuid/ring), so this adds no new crate to compile.
getrandom = "0.2"

# On-device store (P1-10.1/.4): local SQLite (offline; unrelated to the cloud Atlas store).
# `bundled` compiles SQLite from vendored C via `cc` - the same MSVC toolchain the mock build
# already needs for its linker.
rusqlite = { version = "0.31", features = ["bundled"] }

# .hpskill package/archive format (P1-03.2): a zip container (manifest + assets + localized strings +
# signature). Pure-Rust deflate (miniz_oxide) - no zlib-ng C backend - so it builds under mock too.
zip = { version = "2", default-features = false, features = ["deflate"] }

# Backend HTTP client (P1-08.6 / networking): the Rust core owns network egress (the webview CSP is
# `connect-src 'self'`), so catalog / orders / entitlements / license / download calls cross the IPC
# boundary as Tauri commands. rustls (ring) keeps it off a system OpenSSL.
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Embedded llama.cpp binding (P0-02.1). Optional + gated behind the
# `real-inference` feature so the default `mock-inference` build needs no
# C/C++ toolchain, no GGUF, and no libclang. `llama-cpp-sys-2` builds
# llama.cpp from vendored source via cmake (and runs bindgen, which needs
# libclang at build time). The `cuda` feature additionally requires the
# CUDA toolkit (nvcc) at build time; a plain `real-inference` build is
# CPU-only. Pinned to the latest stable at time of writing.
llama-cpp-2 = { version = "0.1.151", optional = true }

[features]
default = ["real-inference"]

# Serve the embedded frontend bundle instead of `build.devUrl`.
#
# DO NOT REMOVE. Without it `tauri-build` emits `cfg(dev)` and the app loads
# http://localhost:4200 even in a `--release` build - so a shipped binary opens on
# WebView2's "can't reach this page / ERR_CONNECTION_REFUSED", having compiled, linked
# and launched without a single warning. The `tauri build` CLI passes this feature for
# you; a bare `cargo build --release` does not, which is exactly how this was missed.
#
#   production : cargo build --release --features custom-protocol
#   dev        : cargo run                    (devUrl + `npm --prefix ../web run start`)
custom-protocol = ["tauri/custom-protocol"]
# The real engine (inference.rs `mod real`): embeds llama.cpp and loads the
# Qwen2.5-3B GGUF in-process. **Default** — the engine the app ships and runs.
# CPU-only unless the `cuda` feature is added. A build needs the native
# toolchain (MSVC + CMake + LLVM/libclang for bindgen); see
# client/docs/REAL-INFERENCE.md.
real-inference = ["dep:llama-cpp-2"]
# The mock engine (inference.rs `mod mock`) — scripted/deterministic token
# stream, no model file, no native dependency. The toolchain-free escape hatch
# for review / CI / UI-dev without a GGUF:
#   cargo build --no-default-features --features mock-inference
mock-inference = []
# Opt-in NVIDIA GPU offload. Requires the CUDA toolkit (nvcc) on PATH at
# build time; without it the llama.cpp cmake build fails. A plain
# `real-inference` build is CPU-only and silently ignores n_gpu_layers.
#   cargo build --release --features cuda
cuda = ["real-inference", "llama-cpp-2/cuda"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
